--- a/index.html
+++ b/index.html
@@ -11,7 +11,36 @@
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
-    <header></header>
+    <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <!--
+          <a href="index.html" class="pull-left visible-md visible-lg">
+          </a>
+          -->
+
+          <div class="navbar-brand">
+            <h1>FOOD, LLC</h1>
+          </div>
+
+          
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="javascripts/jquery-1.12.1.min.js"></script>
+  <script src="javascripts/bootstrap.min.js"></script>
+  <!--
+  <script src="javascripts/script.js"></script>
+-->
 </body>
+
+    <h2 class="text-center">Our Menu</h2>
+
+    <section class="container-fluid"> Hello world ... </section>
 
 </html>
