Signed-off-by: c0RrdUMp <cdfxsub@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div class="navbar-header">
 
           <div class="navbar-brand">
-            <!-- <h1 id="navbrand">Food, LLC</h1> -->
-            <h1 id="navbrand" class="navbar-text navbar-left">Food, LLC</h1>
+            <p id="navbrand" class="navbar-text navbar-left">Food, LLC</p>
           </div>
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -30,13 +29,15 @@
         </div>
         
         <div id="collapsable-nav" class="collapse navbar-collapse">
-          <ul id="nav-list" class="nav navbar-nav navbar-right hidden-lg hidden-md hidden-sm">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+
             <li>
-                <div id="divnav"> <br class="hidden-xs"> Chicken  </div> </li> 
+                <br class="hidden-xs"> Chicken  </li> <hr>
             <li>
-                <div id="divnav"> <br class="hidden-xs"> Beef     </div> </li>
+                <br class="hidden-xs"> Beef     </li> <hr>
             <li>
-                <div id="divnav"> <br class="hidden-xs"> Sushi    </div> </li>
+            <br class="hidden-xs"> Sushi    </li> <hr class="style1">
+
 
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -46,7 +47,7 @@
 
 
 
-      <h2 class="text-center">Our Menu</h2>
+      <h3 class="text-center">Our Menu</h3>
 
     <section class="container-fluid"> 
       <h4 class="text-center"> Chicken</h4>
